EDAN01/minizinc-1.6/tests/parsing/flatzinc/f-exprs.fzn_yacc.err_exp
f-exprs-bad.fzn:2: syntax error before '_'
f-exprs-bad.fzn:5: syntax error before '+'
f-exprs-bad.fzn:6: syntax error before 'b'
f-exprs-bad.fzn:7: syntax error before '-'
f-exprs-bad.fzn:8: syntax error before '-'
f-exprs-bad.fzn:11: syntax error before '|'
f-exprs-bad.fzn:14: syntax error before '['
f-exprs-bad.fzn:17: syntax error before '|'
f-exprs-bad.fzn:20: syntax error before ':'
f-exprs-bad.fzn:23: syntax error before ':'
f-exprs-bad.fzn:26: syntax error before '('
f-exprs-bad.fzn:29: syntax error before '('
f-exprs-bad.fzn:32: syntax error before '('
f-exprs-bad.fzn:35: syntax error before 'C1'
f-exprs-bad.fzn:38: syntax error before '('
f-exprs-bad.fzn:41: syntax error before '{'
f-exprs-bad.fzn:44: syntax error before '('
f-exprs-bad.fzn:47: syntax error before ','
f-exprs-bad.fzn:50: syntax error before '.'
f-exprs-bad.fzn:53: syntax error before '.'
f-exprs-bad.fzn:56: syntax error before '''
f-exprs-bad.fzn:59: syntax error before '`'
